# docker_test

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.backend  Makefile  README.rst  docker-compose.yml  pyproject.toml
dockerfiles/: Dockerfile.backend  Dockerfile.frontend
dotenv_files/: .env.dev  .env.docker
scripts/: init_db.sh  init_project.sh
scripts/db/: inserts.sql  tables.sql
tv_backend/: Makefile  manage.py  mydatabase  pyproject.toml
tv_backend/core/: asgi.py  settings.py  urls.py  wsgi.py
